Fix some paddings and font-sizes on mobile

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ table {
     width: 100%;
 	font-family: 'Roboto', sans-serif;
 	color:#666;
-	font-size: 1.2em;
+	font-size: 1em;
 	text-shadow: 1px 1px 0px #fff;
 	background:#eaebec;
     border:#ccc 1px solid;
@@ -43,7 +43,6 @@ table a:hover {
 }
 
 table th {
-	padding: 21px 25px 22px 25px;
 	border-top: 1px solid #fafafa;
 	border-bottom: 1px solid #e0e0e0;
 
@@ -53,7 +52,6 @@ table th {
 }
 table th:first-child {
 	text-align: left;
-	padding-left:20px;
 }
 table tr:first-child th:first-child {
 	-moz-border-radius-topleft:3px;
@@ -71,7 +69,6 @@ table tr {
 }
 table td:first-child {
 	text-align: left;
-	padding-left:20px;
 	border-left: 0;
 }
 table td {
@@ -116,6 +113,15 @@ table tr:hover td {
 }
 
 @media (min-width: 768px) {
+	table th {
+		padding: 21px 25px 22px 25px;
+	}
+	table th:first-child {
+		padding-left:20px;
+	}
+	table td:first-child {
+		padding-left:20px;
+	}
     .container {
         width: 720px;
     }
